Fix spacing on close button

--- a/src/renderer/css/components/TabBar.css
+++ b/src/renderer/css/components/TabBar.css
@@ -88,7 +88,7 @@
     padding: 0;
     height: 24px;
     width: 24px;
-    margin-left: -12px;
+    margin-left: -16px;
     margin-right: 3px;
 }
 
